unpackaged/main/default/objects/PagesApi__Page_Element_Attribute__c/PagesApi__Page_Element_Attribute__c.object-meta.xml
<CustomObject>
    <description>Page Element Attributes store the configuration required for various Page Elements.</description>
    <label>Page Element Attribute</label>
    <nameField>
        <label>Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Element Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>