unpackaged/main/default/objects/PagesApi__Page_Element_Attribute__c/fields/PagesApi__Key__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Key__c</fullName>
    <description>** Required ** Attribute key as defined by the page element dynamic component.</description>
    <inlineHelpText>** Required ** Attribute key as defined by the page element dynamic component.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>