unpackaged/main/default/objects/PagesApi__Page_Element_Attribute__c/fields/PagesApi__Page_Element__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Page_Element__c</fullName>
    <description>** Required ** Link to related Page Element.</description>
    <inlineHelpText>** Required ** Link to related Page Element.</inlineHelpText>
    <label>Page Element</label>
    <referenceTo>PagesApi__Page_Element__c</referenceTo>
    <relationshipLabel>Page Element Attributes</relationshipLabel>
    <relationshipName>Page_Element_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>