unpackaged/main/default/objects/PagesApi__Page_Element_Attribute__c/fields/PagesApi__Type__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Type__c</fullName>
    <description>** System Field ** The expected and required data type of the page element attribute.</description>
    <inlineHelpText>** System Field ** The expected and required data type of the page element attribute.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>