unpackaged/main/default/objects/PagesApi__Page_Element_Attribute__c/fields/PagesApi__Value__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Value__c</fullName>
    <description>The value set for the page element configuration.</description>
    <inlineHelpText>The value set for the page element configuration.</inlineHelpText>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>